--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -56,8 +56,9 @@
 		height: 30px;
 		padding: 0 12px;
 		border: 1px solid #000;
-		border-radius: 30px;
+		border-radius: 100vw;
 		font-size: 13px;
+		letter-spacing: -0.025em;
 		text-align: center;
 	}
 	.button__item--black {
@@ -75,6 +76,31 @@
 		height: 60px;
 		font-weight: 500;
 		font-size: 18px;
+	}
+
+	@include breakpoints.mobile() {
+		.button__container {
+			.button__item {
+				&:not(:first-child) {
+					margin-left: 5px;
+				}
+			}
+		}
+		.button__item {
+			height: 26px;
+			padding: 0 8px;
+			letter-spacing: -0.012em;
+		}
+		.button__item--large {
+			min-width: 140px;
+			height: 50px;
+			font-size: 14px;
+		}
+		.button__item--medium {
+			height: 36px;
+			padding: 0 12px;
+			font-size: 13px;
+		}
 	}
 }
 
