--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -311,6 +311,7 @@
 					border-radius: 0;
 					background-color: #fff;
 					font-size: 24px;
+					@include mixins.ATr();
 				}
 				::-webkit-input-placeholder {
 					padding: 0;
