--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -38,6 +38,41 @@
 	}
 }
 
+.check {
+	.check__inner {
+		display: inline-flex;
+		&:not(:first-child) {
+			margin-left: 35px;
+		}
+		align-items: center;
+
+		input[type='checkbox'] {
+			& + label {
+				padding-left: 7px;
+			}
+		}
+		input[type='radio'] {
+			& + label {
+				padding-left: 5px;
+			}
+		}
+	}
+
+	@include breakpoints.mobile() {
+		.check__inner {
+			&:not(:first-child) {
+				margin-left: 30px;
+			}
+		}
+
+		input[type='radio'] {
+			& + label {
+				padding-left: 10px;
+			}
+		}
+	}
+}
+
 // button
 .button {
 	.button__container {
