--- a/src/assets/css/order.scss
+++ b/src/assets/css/order.scss
@@ -45,6 +45,12 @@ width: 100%;
       width: 70px;
     }
   }
+  input[type='radio'] {
+    border: 1px solid #000000;
+    &:checked:before, &:checked:after {
+      display: none;
+    }
+  }
 
   input[type='checkbox'] {
     width: 24px;
@@ -74,6 +80,11 @@ width: 100%;
     }
     & ~ input[type='checkbox'] {
       margin-left: 25px;
+    }
+  }
+  .ec-base-table {
+    select:not([readonly]):not([disabled]):not([aria-invalid=true]):focus {
+      background-color: #f4f4f7;
     }
   }
 
@@ -229,6 +240,7 @@ width: 100%;
     border-radius: 35px;
     overflow: hidden;
     padding: 30px;
+    margin-bottom: 10px;
   
     @include breakpoints.mobile() {
       width: 100%;
@@ -236,7 +248,6 @@ width: 100%;
     }
     .title {
       height: auto;
-      margin: 0 0 45px !important;
       padding: 0;
       border: 0;
       border-bottom: 0;
@@ -256,12 +267,14 @@ width: 100%;
     .ec-base-table {
       tbody {
         th, td {
+          min-height: 32px;
           padding: 1px 0;
           border: 0;
           background: none;
+          vertical-align: middle;
         }
         th {
-          padding-top: 15px;
+          padding-top: 5px;
         }
         tr:first-child {
           th {
@@ -281,6 +294,7 @@ width: 100%;
         padding: 0 40px 0 24px;
         border: 0;
         font-size: 14px;
+        margin-top: 2px !important;
       }
       textarea {
         min-height: 130px;
@@ -293,7 +307,8 @@ width: 100%;
 
       .ec-shop-deliverySimpleForm {
         tr:first-child th {
-          padding-top: 25px;
+          padding-top: 30px;
+          vertical-align: top;
         }
         select {
           margin-top:2px;
@@ -305,6 +320,28 @@ width: 100%;
         text-align: center;
       }
     }
+    .address {
+      .btn_addrlist {
+        display: inline-flex;
+        max-width: 90px;
+        justify-content: center;
+      }
+      input[type='radio'] {
+        margin-right: 5px;
+      }
+    }
+    .use_address_field {
+      #rzipcode1 {
+        max-width: 180px;
+      }
+      .small_button {
+        display: inline-flex;
+        justify-content: center;
+      }
+      .btn_zipcode {
+        width: 75px;
+      }
+    }
     input[type=radio] {
       & + label {
         font-size: 14px;
@@ -312,16 +349,29 @@ width: 100%;
     }
   }
   .totalArea {
-    position: absolute;
-    right: 0;
-    top: 62px;
-    width: 370px;
+    width: calc(100% - 370px);
+    padding: 30px;
+    margin-bottom: 10px;
     border:1px solid #000000;
     border-radius: 35px;
     overflow: hidden;
+    .title {
+      font-size: 24px;
+      > h3 {
+        font-size: inherit;
+      }
+    }
+    .total {
+      th {
+        background: none !important;
+      }
+    }
   }
 
   .xans-order-form {
+    .title {
+      margin: 0 0 35px !important;
+    }
     .ec-base-table {
       table {
         border: none;
@@ -363,7 +413,6 @@ width: 100%;
     .orderListArea {
       .title {
         height: auto;
-        margin: 0;
         padding: 0;
         border: 0;
         border-bottom: 0;
@@ -377,15 +426,25 @@ width: 100%;
         }
       }
     }
-  }
 
-  .payArea {
-    width: calc(100% - 370px);
-    border-color: #000000;
-    border-radius: 35px;
-    overflow: hidden;
-    padding: 30px;
-
+    .payArea {
+      position: initial;
+      width: calc(100% - 370px);
+      border-color: #000000;
+      border-radius: 35px;
+      overflow: hidden;
+      padding: 30px;
+      &::after {
+        display: none;
+      }
+      .total {
+        float: inherit;
+        position: absolute;
+        right: 0;
+        top: 62px;
+        margin: 0;
+      }
+    }
   }
 
   .ec-base-help {
