--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -84,10 +84,14 @@
 			}
 		}
 	}
+	.button__container--left {
+		justify-content: flex-start;
+	}
 	.button__item {
-		display: inline-flex;
+		display: flex;
 		justify-content: center;
 		align-items: center;
+		gap: 8px;
 		height: 30px;
 		padding: 0 12px;
 		border: 1px solid #000;
@@ -112,6 +116,9 @@
 		font-weight: 500;
 		font-size: 18px;
 	}
+	.button__ico--arrow-right {
+		@include mixins.iconArrow($direction: 'right', $width: 25px, $height: 12px, $thick: 1px, $color: #000, $display: inline-block, $position: relative);
+	}
 
 	@include breakpoints.mobile() {
 		.button__container {
@@ -135,6 +142,59 @@
 			height: 36px;
 			padding: 0 12px;
 			font-size: 13px;
+		}
+	}
+}
+
+// bullet
+.bullet {
+	.bullet__grid {
+		display: grid;
+		// grid-auto-columns: 1fr;
+		// grid-auto-rows: 1fr;
+		// grid-auto-flow: column dense;
+		// grid-auto-rows: repeat(auto);
+		// grid-auto-columns: max-content;
+		grid-template-columns: repeat(auto-fit, minmax(50%, auto));
+		// grid-template-rows: 200px repeat(auto-fill, 100px) 300px;
+		margin-top: -40px;
+		.bullet__group {
+			margin-top: 40px;
+			&:nth-child(3n) {
+				// order : 1;
+					// grid-row: span 1 / auto;
+				// grid-column-start: 1;
+				// grid-column-end: 2;
+				// grid-column: 2;
+				// grid-row-start: span 0;
+				// grid-row-end: span 2;
+			}
+		}
+	}
+	.bullet__title {
+		margin-bottom: 16px;
+		font-size: 16px;
+		line-height: 22px;
+		letter-spacing: -0.04em;
+		@include mixins.PtdMedium();
+	}
+	.bullet__list {
+		line-height: 24px;
+		letter-spacing: -0.025em;
+		@include mixins.PtdRegular();
+	}
+	.bullet__item {
+		&:not(li) {
+			line-height: 24px;
+			letter-spacing: -0.025em;
+			@include mixins.PtdRegular();
+		}
+		&:not(:first-child) {
+			
+		}
+		.bullet__row {
+			display: flex;
+			gap: 3px;
 		}
 	}
 }
