--- a/src/assets/css/search.scss
+++ b/src/assets/css/search.scss
@@ -7,6 +7,7 @@
 	.search__result {
 		padding-top: 40px;
 		.search__text {
+			margin:0 30px 30px;
 			font-size: 18px;
 			letter-spacing: -0.025em;
 			text-align: center;
